Fixing a lot of Sonar issues. (the easy ones!)
Former-commit-id: f245a99b2254c1d4d9b60073a959241c05817fb8